# adk-circle-call-centre-agent-demo

./: .gitignore  ARCHITECTURE.md  DEMO_SCRIPT.md  GETTING_STARTED.md  README.md  SECURITY.md  package.json  tsconfig.base.json
agent/: package.json
agent/src/: events.ts  loop.ts  t3n-client.ts
agent/src/tools/: getLedger.ts  inspectService.ts  listFlaggedTickets.ts  payForService.ts  searchServices.ts
contract/: Cargo.toml
contract/src/: ledger.rs  lib.rs  pay.rs  policy.rs  relay_client.rs
contract/wit/: world.wit
dashboard/: package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/events/: route.ts
dashboard/app/api/ledger/: route.ts
dashboard/app/api/reset/: route.ts
dashboard/app/api/revoke/: route.ts
dashboard/components/: ActivityFeed.tsx  AgentChat.tsx  AuditTrail.tsx  BudgetMeter.tsx  PolicyPanel.tsx  ProviderComparison.tsx
dashboard/lib/: replay-data.ts  t3n.ts  useReplay.ts
docs/: CUSTOMIZE.md  GOTCHAS.md
scripts/: demo-replay.ts  fix-map-acl.ts  grant-raw.ts  grant.ts  lib.ts  mock-relay.ts  package.json  reset-budget.ts  revoke.ts  setup.ts  test-agent-auth.ts  test-agent-credits.ts  test-contract-logs.ts  test-get-ledger.ts  test-pay.ts  test-process-payment.ts  update-policy.ts  update-secret.ts
services/payment-relay/: package.json
services/payment-relay/mock-data/: README.md  services.json
services/payment-relay/src/: circle-cli.ts  server.ts
